--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>lol why not</title>
+  <title>Large Text Page</title>
+  <style>
+    body {
+      background-color: black;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    h1 {
+      font-size: 6rem;
+      text-align: center;
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
-<pre>Pontus: lol why not</pre>
+  <h1>lol why not</h1>
 </body>
 </html>
